aksbasecode/ClusterDeployments/telemetryotel.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otelcontribcollector
spec:
  replicas: 2
  selector:
    matchLabels:
      app: otelcontribcollector
  template:
    metadata:
      labels:
        app: otelcontribcollector
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      containers:
      - name: otelcontribcollector
        image: wkmarcosyard.azurecr.io/linux/dockerwkmarcos:0.43.0-387380
        resources:
          requests:
            cpu: 150m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        ports:
        - containerPort: 13133
          name: healthcheck
        - containerPort: 4318
          name: http          
---
apiVersion: v1
kind: Service
metadata:
  name: otelcontribservice
spec:
  type: ClusterIP
  selector:
    app: otelcontribcollector
  ports:
  - name: http
    protocol: TCP  
    port: 443  
    targetPort: 4318
  - name: healthcheck
    protocol: TCP  
    port: 80  
    targetPort: 13133

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: opentelemetry
  annotations:
    appgw.ingress.kubernetes.io/backend-path-prefix: "/"
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          service:
            name: otelcontribservice
            port:
              number: 80
        pathType: Exact
